Override admin: prueba TEST OVERRIDE en base_site.html

--- a/core/templates/admin/base_site.html
+++ b/core/templates/admin/base_site.html
@@ -2,14 +2,7 @@
 {% load static %}
 
 {% block branding %}
-  <div id="site-name">
-    <a href="{% url 'admin:index' %}">
-      <img src="{% static 'core/img/medops-logo.png' %}" 
-           alt="MedOps Logo" 
-           style="height:40px; vertical-align:middle; margin-right:10px;">
-      <span style="font-size: 20px; font-weight: bold;">MedOps Clinical System</span>
-    </a>
-  </div>
+  <h1 style="color:red;">TEST OVERRIDE</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
