--- a/core/templates/admin/base_site.html
+++ b/core/templates/admin/base_site.html
@@ -2,7 +2,14 @@
 {% load static %}
 
 {% block branding %}
-  <h1 style="color:red;">TEST OVERRIDE</h1>
+  <div id="site-name">
+    <a href="{% url 'admin:index' %}">
+      <img src="{% static 'core/img/medops-logo.png' %}" 
+           alt="MedOps Logo" 
+           style="height:40px; vertical-align:middle; margin-right:10px;">
+      <span style="font-size: 20px; font-weight: bold;">MedOps Clinical System</span>
+    </a>
+  </div>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
