--- a/core/templates/admin/payment/change_list.html
+++ b/core/templates/admin/payment/change_list.html
@@ -1,7 +1,5 @@
 {% extends "admin/change_list.html" %}
 {% block object-tools-items %}
     {{ block.super }}
-    {% if report_button %}
-        <li>{{ report_button|safe }}</li>
-    {% endif %}
+    {{ report_button|safe }}
 {% endblock %}
